--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.1",
     "jose": "^6.0.13",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.546.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "react": "19.1.0",
