--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.546.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
+    "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
