--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@modelcontextprotocol/sdk": "^1.24.3",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
