feat: update dependencies and enhance UI components
- Added autoprefixer to package.json for better CSS compatibility.
- Downgraded tailwindcss to version 3.4.19 for stability.
- Removed unused image and SVG files from the public directory.
- Updated globals.css to implement Tailwind CSS directives and improved color variables for a more earthy, food-focused design.
- Refactored layout.tsx to enhance metadata and layout structure.
- Implemented HeroSearch component for improved user interaction with search functionality.
- Updated Navbar component styles for better visual hierarchy.
- Created postcss.config.js for Tailwind CSS and autoprefixer integration.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.24.3",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
@@ -26,7 +27,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
