--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "openai": "^6.10.0",
+    "rate-limiter-flexible": "^9.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
