--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@modelcontextprotocol/sdk": "^1.24.3",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.8",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
@@ -25,10 +27,8 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "openai": "^6.10.0",
-    "rate-limiter-flexible": "^9.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
