--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.546.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
